@@ -112,6 +112,7 @@ Laurent Morichetti	laurentm@cup.hp.com
 Maciej Stachowiak	mstachow@mit.edu
 Maciej W. Rozycki	macro@ds2.pg.gda.pl
 Manu Rouat		emmanuel.rouat@wanadoo.fr
+Marcus Brinkmann	Marcus.Brinkmann@ruhr-uni-bochum.de
 Marcus G. Daniels	mgd@ute.santafe.edu
 Marius Vollmer		mvo@zagadka.ping.de
 Mark Eichin		eichin@cygnus.com
