@@ -64,3 +64,9 @@ CC='gcc' ./configure
 val=`$MAKE -s echorule`;
 echo $val
 test "x$val" = "xdlmain.c dlmain.o"
+
+# This is unrelated to the rest of this test.  But while we are
+# at it, make sure we don't use am__helldl_SOURCES_DIST here, since
+# it's not needed.  DIST_SOURCES should contains $(helldl_SOURCES).
+grep am__helldl_SOURCES_DIST Makefile && exit 1
+grep 'DIST_SOURCES.*\(helldl_SOURCES\)' Makefile
